<resources>

    <!--网络相关错误提示-->
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>

    <!--注册页面-->
    <string name="app_name">德晟金服</string>
    <string name="phone">请输入手机号码</string>
    <string name="pwd">设置密码8-20位,至少包含数字+字母</string>
    <string name="inviter"> 推荐人手机号(选填)</string>
    <string name="reg">勾选表示已阅读并同意</string>
    <string name="protocol">《德晟金服用户协议》</string>
    <string name="ok_reg">注册</string>
    <string name="fast_login">快速登录</string>

    <!--MainActivity页面-->
    <string name="home">首页</string>
    <string name="invest">我要出借</string>
    <string name="mime">我的</string>

    <!--登录页面-->
    <string name="pwd_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="ok_login">登录</string>
    <string name="fast_reg">快速注册</string>
    <string name="login_pwd">请输入登录密码</string>

    <!--充值页面-->
    <string name="recharge_title">充值</string>
    <string name="recharge_record">快捷充值记录</string>
    <string name="recharge_unit">元</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_hint">请输入充值金额</string>
    <string name="button">前往充值</string>
    <string name="account">您的渤海银行存管账户为</string>
    <string name="recharge_money_unit">充值金额(元)</string>
    <string name="recharge_date">充值时间</string>
    <string name="recharge_status">状态</string>
    <string name="recharge_type">充值方式</string>
    <string name="fast_type">快捷充值</string>
    <string name="big_type">转账充值（大额充值）</string>
    <string name="big_type_word">（大额充值）</string>
    <string name="transfer">转账充值步骤:</string>
    <string name="transfer_word1">1、使用您已绑定存管账户的银行卡给德晟金服渤海银行账号进行转账充值，一般2小时内即可到账；
      支持网银转账、手机银行转账、柜台转账；（不支持ATM、支付宝、微信转账）</string>
    <string name="transfer_word2">2、核对充值资金到账情况，充值资金到账后，即可进行出借投资；</string>
    <string name="make_collections">收款账户信息:</string>
    <string name="make_collections_name1_word">收款方开户行</string>
    <string name="make_collections_name2_word">收款方户名</string>
    <string name="make_collections_name3_word">收款账号</string>
    <string name="make_collections_name1">渤海银行深圳分行</string>
    <string name="make_collections_name2">深圳市德晟互联网金融服务有限公司</string>
    <string name="make_collections_name3">99038000017444340</string>


    <!--提现页面-->
    <string name="withdraw_title">提现</string>
    <string name="withdraw_record">提现记录</string>
    <string name="withdraw_unit">元</string>
    <string name="withdraw_money">提现金额</string>
    <string name="withdraw_code">提现验证</string>
    <string name="withdraw_hint">请输入提现金额</string>
    <string name="withdraw_all">余额全提</string>
    <string name="withdraw_button">前往提现</string>
    <string name="withdraw_money_unit">提现金额(元)</string>
    <string name="withdraw_date">提现时间</string>
    <string name="withdraw_status">状态</string>
    <string name="withdraw_type">到账方式</string>
    <string name="withdraw_type1">T+1提现</string>
    <string name="withdraw_type2">T+0提现</string>
    <string name="withdraw_type1_word">（次日到账，节假日顺延）</string>
    <string name="withdraw_type2_word">（两小时到账）</string>
    <string name="withdraw_word1">全部免费</string>
    <string name="withdraw_word2">实际到账：</string>
    <string name="withdraw_word3">温馨提示：</string>
    <string name="withdraw_word4">1、提现金额必须≥100元；</string>
    <string name="withdraw_word5">2、提现到账方式，资金提现后，下一个工作日17:00左右到账；</string>
    <string name="withdraw_word6">3、为保障您的资金安全，实行资金同卡进出，提现资金默认到达您的充值银行卡；</string>

    <!--出借详情界面-->
    <string name="year_rate">年化利率</string>
    <string name="limit_time">借款期限</string>
    <string name="way_word">计息方式</string>
    <string name="residue_word">剩余可投</string>
    <string name="repayment_word">还款方式</string>
    <string name="account_residue_money_word">账户余额</string>
    <string name="red">红包加息</string>
    <string name="invest_money_word">投资金额</string>
    <string name="invest_money">100起投,100倍数递增</string>
    <string name="invest_all">全额投资</string>
    <string name="anticipated_income_word">预计收益：</string>
    <string name="real_income_word">实际收益：</string>
    <string name="pwd_word">存管密码</string>
    <string name="et_pwd">请输入存管密码</string>
    <string name="forget">忘记密码</string>
    <string name="code_word">动态口令</string>
    <string name="code_hint">请输入动态口令</string>
    <string name="get_command">获取口令</string>
    <string name="read">已阅读同意</string>
    <string name="risk_book">《风险提示书》</string>
    <string name="electronic_signature">《电子签章授权》</string>
    <string name="invest_btn">确认投资</string>
    <string name="see_info_btn">查看借款详情</string>


    <!--红包卡券-->
    <string name="prize_title">红包卡券</string>

    <!--个人中心-->
    <string name="open_bank">您未开通银行存管,请点击前往办理</string>
    <string name="open_bank_btn">立即开通</string>

    <!--更新相关-->
    <string name="new_version_detected">检测到新版本 </string>
    <string name="download_background">后台下载</string>
    <string name="remind_me_later">下次再说</string>

    <!-- 分享字串 -->
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="share_failed">分享失败</string>

    <!-- 弹出框 -->
    <string name="log_out">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="browse">修改</string>
    <string name="delete">删除</string>

    <!--公用的-->
    <string name="sms_code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="un_sms">收不到短信?</string>
    <string name="sound_code">语音验证码</string>
    <string name="input_sms">请输入短信验证码</string>
    <string name="money">可用余额</string>

    <!--Other-->
    <string name="double_tap_to_exit">再按一次退出程序</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
