<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              tools:context="com.desjf.dsjr.ui.activity.WithdrawActivity">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/iv_withdraw_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/withdraw_title"
            android:textColor="@color/font"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tv_withdraw_record"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_record"
            android:textSize="16sp"
            android:textColor="@color/number"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/big_line"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/nfont"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/money"/>
        <TextView
            android:id="@+id/tv_money"
            android:textColor="@color/font"
            android:layout_marginLeft="23dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="--元"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/nfont"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/withdraw_money"/>
        <EditText
            android:id="@+id/tv_withdraw_money"
            android:layout_marginLeft="23dp"
            android:inputType="number|numberDecimal"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:hint="@string/withdraw_hint"
            android:textColorHint="@color/hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"/>
    </LinearLayout>

    <View style="@style/big_line"/>

    <TextView
        style="@style/LSeparationDistanceStyle"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/withdraw_type"
        android:textSize="14sp"
        android:textColor="@color/nfont"/>

    <View
        style="@style/small_line"
        android:layout_marginLeft="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/recharge_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_fast"
            style="@style/LSeparationDistanceStyle"
            android:button="@drawable/login_check_box_remember_psw"
            android:paddingLeft="15dp"
            android:text="@string/withdraw_type1"
            android:textSize="14sp"
            android:textColor="@color/nfont"/>
        <RadioButton
            android:id="@+id/rb_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_type2"
            android:textSize="14sp"
            android:textColor="@color/nfont"
            android:paddingLeft="15dp"
            android:button="@drawable/login_check_box_remember_psw"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="43dp"/>

    </RadioGroup>
        <TextView
            android:id="@+id/tv_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/recharge_rg"
            android:layout_marginTop="15dp"
            android:text="@string/withdraw_type1_word"
            android:textSize="14sp"
            android:textColor="@color/font_gray"/>

        <TextView
            android:id="@+id/tv_word2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/recharge_rg"
            android:layout_marginTop="43dp"
            android:text="@string/withdraw_type2_word"
            android:textSize="14sp"
            android:textColor="@color/font_gray"
            android:layout_below="@+id/tv_word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_word"
            android:layout_marginTop="9dp"
            android:text="@string/withdraw_word1"
            android:textSize="12sp"
            android:textColor="@color/font_gray"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/tv_poundage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_word2"
            android:layout_marginTop="9dp"
            android:text="手续费：2元"
            android:textSize="12sp"
            android:textColor="@color/font_gray"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_word2"
            android:layout_marginTop="9dp"
            android:layout_toRightOf="@+id/tv_poundage"
            android:text="本月剩余0次免费"
            android:textSize="12sp"
            android:textColor="@color/font_gray"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="14dp"
         android:orientation="vertical"
         android:background="@color/big_line">
     <TextView
         android:id="@+id/tv_real_income"
         style="@style/LSeparationDistanceStyle"
         android:layout_marginTop="13dp"
         android:text="实际到账：--元"
         android:textSize="12sp"
         android:textColor="@color/nfont"/>
         <TextView
             android:id="@+id/tv_invest_btn"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:background="@drawable/textview_cricle_btn"
             android:layout_above="@+id/tv_see_info_btn"
             android:text="@string/withdraw_button"
             android:textSize="18sp"
             android:textColor="@color/white"/>
         <TextView
             style="@style/LSeparationDistanceStyle"
             android:layout_marginTop="12dp"
             android:text="@string/withdraw_word3"
             android:textSize="10sp"
             android:textColor="@color/font_gray"/>
         <TextView
             style="@style/LSeparationDistanceStyle"
             android:layout_marginTop="10dp"
             android:text="@string/withdraw_word4"
             android:textSize="10sp"
             android:textColor="@color/font_gray"/>
         <TextView
             style="@style/LSeparationDistanceStyle"
             android:layout_marginTop="10dp"
             android:layout_marginRight="15dp"
             android:text="@string/withdraw_word5"
             android:textSize="10sp"
             android:textColor="@color/font_gray"/>
         <TextView
             style="@style/LSeparationDistanceStyle"
             android:layout_marginTop="10dp"
             android:layout_marginRight="15dp"
             android:text="@string/withdraw_word6"
             android:lineSpacingExtra="10dp"
             android:textSize="10sp"
             android:textColor="@color/font_gray"/>



     </LinearLayout>



</LinearLayout>
