<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

      <com.desjf.dsjr.widget.EditTextDrawableClick
          android:id="@+id/et_pwd_phone"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:drawableRight="@mipmap/clear"
          android:paddingRight="12dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:textSize="15sp"
          android:hint="@string/phone"
          android:textColor="@color/transparent"
          android:inputType="phone|number"
          android:background="@null"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:background="@color/small_line"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:orientation="horizontal">
            <EditText
                android:id="@+id/et_pwd_pwd"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:paddingRight="12dp"
                android:hint="@string/input_sms"
                android:textSize="15sp"
                android:textColor="@color/n_font_gray"
                android:background="@null"/>
            <Button
                android:id="@+id/btn_send"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginRight="12dp"
                android:text="@string/get_code"
                android:textSize="12sp"
                android:textColor="@color/login_text"
                android:background="@mipmap/sendcode"/>


      </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:background="@color/small_line"/>

      <TextView
          android:id="@+id/tv_login_btn"
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:layout_marginTop="40dp"
          android:gravity="center"
          android:background="@drawable/textview_cricle_btn"
          android:text="@string/ok_login"
          android:textSize="18sp"
          android:textColor="@color/white"/>

      <TextView
          android:id="@+id/tv_fast_reg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:layout_gravity="center"
          android:text="@string/fast_reg"
          android:textSize="15sp"
          android:textColor="@color/login_text"
          android:layout_below="@+id/tv_login_btn"/>


</LinearLayout>


