<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.desjf.dsjr.widget.EditTextDrawableClick
        android:id="@+id/et_code_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableRight="@mipmap/clear"
        android:paddingRight="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="15sp"
        android:inputType="phone|number"
        android:hint="@string/phone"
        android:textColor="@color/transparent"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/small_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_code_pwd"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingRight="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/login_pwd"
            android:textSize="15sp"
            android:textColor="@color/n_font_gray"
            android:background="@null"/>
        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/visible"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/small_line"/>


    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/forget_pwd"
        android:textSize="15sp"
        android:textColor="@color/font"/>

    <TextView
        android:id="@+id/tv_login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/textview_cricle_btn"
        android:text="@string/ok_login"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_fast_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:text="@string/fast_reg"
        android:textSize="15sp"
        android:textColor="@color/login_text"
        android:layout_below="@+id/tv_login_btn"/>


</LinearLayout>
