<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/transparent_statusbar_fit"
              android:background="@color/white"
              tools:context=".ui.activity.RegisterActivity">

    <RelativeLayout
        android:id="@+id/rv_title"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:src="@mipmap/back"/>
        <TextView
            android:id="@+id/tv_title"
            android:textColor="@color/font"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="首页"/>

    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/rv_title"
        android:layout_marginTop="40dp"
        android:src="@mipmap/home_logo"/>

    <com.desjf.dsjr.widget.EditTextDrawableClick
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableRight="@mipmap/clear"
        android:paddingRight="12dp"
        android:layout_marginTop="56dp"
        android:hint="@string/phone"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:digits="0123456789"
        android:maxLength="11"
        android:background="@null"
        android:drawableBottom="@drawable/edittext_line"
        android:layout_below="@+id/iv_logo"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/pwd"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@null"
        android:password="true"
        android:drawableBottom="@drawable/edittext_line"
        android:layout_below="@+id/et_phone"/>
    <ImageView
        android:id="@+id/iv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/et_inviter"
        android:src="@mipmap/visible"/>
    <EditText
        android:id="@+id/et_inviter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:digits="0123456789"
        android:maxLength="11"
        android:hint="@string/inviter"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@null"
        android:drawableBottom="@drawable/edittext_line"
        android:layout_below="@+id/et_pwd"/>

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_inviter"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_code"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingRight="12dp"
            android:hint="@string/input_sms"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@null"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginRight="12dp"
            android:text="@string/get_code"
            android:textSize="12sp"
            android:textColor="@color/login_text"
            android:background="@mipmap/sendcode"/>
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/ll_code"
        android:background="@color/small_line"/>

    <CheckBox
        android:id="@+id/cb_choose"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawableLeft="@drawable/login_check_box_remember_psw"
        android:drawablePadding="8dp"
        android:layout_below="@+id/view"
        android:text="@string/reg"
        android:textColor="@color/nfont"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/tv_risk_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/view"
        android:layout_toRightOf="@+id/cb_choose"
        android:text="@string/protocol"
        android:textColor="@color/red_choose"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/tv_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/textview_cricle_btn"
        android:layout_below="@+id/tv_risk_book"
        android:text="@string/ok_reg"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_fast_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:text="@string/fast_login"
        android:textSize="15sp"
        android:textColor="@color/login_text"
        android:layout_below="@+id/tv_reg_btn"/>


</RelativeLayout>
