<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent"
              tools:context=".ui.activity.MainActivity">
    <FrameLayout
        android:id="@+id/fragment_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2b2b2"/>
    <RadioGroup
        android:id="@+id/main_tab_group"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/btn_home"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/btn_maintab_home"
            android:text="@string/home"
            android:textColor="@color/btn_tab_color"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/btn_invest"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/btn_maintab_invest"
            android:text="@string/invest"
            android:textColor="@color/btn_tab_color"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/btn_mime"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/btn_maintab_mime"
            android:text="@string/mime"
            android:textColor="@color/btn_tab_color"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <!--
          <RadioButton
            android:id="@+id/btn_wode"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_height="match_parent"
            android:text="我的"
            android:textColor="@color/btn_tab_color"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/btn_maintab_wode"/>
        -->

    </RadioGroup>

</LinearLayout>
