<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:background="@color/view_bg"
              android:focusableInTouchMode="true"
              tools:context="com.desjf.dsjr.ui.activity.RechargeRecordActivity">
    <com.desjf.dsjr.widget.StatusBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

   <include layout="@layout/title_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/huibai"/>
    <LinearLayout
        android:background="@color/table_layout_bg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:gravity="center"
            android:textColor="@color/nfont"
            android:text="@string/withdraw_money_unit"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:gravity="center"
            android:textColor="@color/nfont"
            android:textSize="14sp"
            android:text="@string/withdraw_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:gravity="center"
            android:textColor="@color/nfont"
            android:textSize="14sp"
            android:text="@string/withdraw_status"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
          </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/huibai"/>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl_withdraw_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_withdraw_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>

